# SeaSurfaceTargetDetection

./: README.md
labelverify/: CMakeLists.txt  main.cpp  utils.h
tools/: createlist.sh
